--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "aux": "git subtree push --prefix dist origin gh-pages"
+    
+
   },
   "author": "",
   "license": "ISC",
